<resources>
    <string name="app_name">FlashCard</string>
    <!--Login page-->
    <string name="login_title">Flash Card</string>
    <string name="login_text_username">Username</string>
    <string name="login_hint_username">Enter username</string>
    <string name="login_text_password">Password</string>
    <string name="login_hint_password">Enter password</string>
    <string name="login_button_text">Login</string>
    <!--Main page-->
    <string name="main_text_generate">Generate 10 random problems</string>
    <string name="main_text_answer">Your answer:</string>
    <string name="main_hint_answer">Enter answer</string>
    <string name="main_text_submit">Submit</string>
    <string name="main_text_restart">Restart</string>
</resources>
