<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_text_generate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/btnGenerate"
        android:layout_above="@+id/layoutOps"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDividend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:textSize="64sp" />

        <TextView
            android:id="@+id/txtDivisor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top|end"
            android:textSize="64sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutOps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAnswer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="@string/main_text_answer" />

        <EditText
            android:id="@+id/edtAnswer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="flagNoExtractUi"
            android:layout_weight="1"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:hint="@string/main_hint_answer" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/main_text_submit" />
    </LinearLayout>

</RelativeLayout>